:bug: Fix links overflowing

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,7 @@
+* {
+  overflow-wrap: break-word;
+}
+
 img {
   max-width: 100%;
 }
